<?xml version="1.0"?>
<package format="3">
  <name>hsr_patrol_smach</name>
  <version>0.0.1</version>
  <description>
    SMACH-based patrol state machine for HSR on ROS 2
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ===================== -->
  <!-- 🔧 Build tool         -->
  <!-- ===================== -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ===================== -->
  <!-- 📦 Runtime depends   -->
  <!-- ===================== -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

